--- a/temario/primer-ejercicio/test/simulador.html
+++ b/temario/primer-ejercicio/test/simulador.html
@@ -805,19 +805,121 @@
             document.getElementById(id).classList.toggle('collapsed');
         }
 
+        // Temas hardcodeados como fallback
+        const temasDefault = {
+            "3.A.1": "Objeto y métodos de la ciencia económica. Cuestiones y debates actuales, con especial referencia a la economía conductual.",
+            "3.A.2": "Los economistas clásicos y Marx.",
+            "3.A.3": "Los economistas neoclásicos.",
+            "3.A.4": "El pensamiento económico de Keynes. Referencia a la economía postkeynesiana y el desequilibrio.",
+            "3.A.5": "La síntesis neoclásica. El monetarismo.",
+            "3.A.6": "La nueva macroeconomía clásica. La hipótesis de las expectativas racionales; la crítica de Lucas; el surgimiento de los modelos dinámicos estocásticos de equilibrio general.",
+            "3.A.7": "La nueva economía keynesiana. Primera y segunda generación.",
+            "3.A.8": "Teoría de la demanda del consumidor (I). Axiomas sobre las preferencias, función de utilidad y función de demanda marshalliana. La teoría de la preferencia revelada. Precios hedónicos.",
+            "3.A.9": "Teoría de la demanda del consumidor (II). Dualidad e integrabilidad de las preferencias. Sistemas de demanda utilizados en estudios empíricos. Medidas de cambio en el bienestar.",
+            "3.A.10": "Teoría de la demanda del consumidor (III). Elección del consumidor en situaciones de riesgo e incertidumbre.",
+            "3.A.11": "Teoría de la producción. Caracterización de la tecnología de la empresa a corto y largo plazo. El conjunto de posibilidades de producción. La función de producción. Rendimientos locales y globales a escala. Elasticidad de sustitución. Producción conjunta.",
+            "3.A.12": "Teoría de los costes. Análisis de dualidad en el ámbito de la empresa. Aplicaciones empíricas.",
+            "3.A.13": "Economía de la información y teoría de la agencia: selección adversa y riesgo moral.",
+            "3.A.14": "Teoría de juegos. Principales conceptos. Aplicaciones, con especial referencia a las subastas.",
+            "3.A.15": "La empresa: el tamaño eficiente y sus límites. Mención especial de la economía de los costes de transacción. La Teoría de la Organización Industrial: barreras a la entrada y mercados impugnables.",
+            "3.A.16": "Análisis de mercados (I). El modelo de competencia perfecta. Análisis de equilibrio parcial: corto y largo plazo; dinámicas de ajuste y estabilidad del equilibrio. Análisis de eficiencia y bienestar.",
+            "3.A.17": "Análisis de mercados (II). Teoría del monopolio. Discriminación de precios. Monopolio natural. Producción conjunta. Análisis de eficiencia y bienestar. Monopsonio. Monopolio bilateral.",
+            "3.A.18": "Análisis de mercados (III). Diferenciación de productos: la teoría de la competencia monopolística y otros desarrollos.",
+            "3.A.19": "Análisis de mercados (IV). Teoría del oligopolio: soluciones no cooperativas y soluciones cooperativas.",
+            "3.A.20": "Poder de mercado y regulación óptima. Definición del mercado relevante. Desarrollos en presencia de información asimétrica. Aplicaciones prácticas.",
+            "3.A.21": "La teoría del equilibrio general.",
+            "3.A.22": "Economía del bienestar (I). Los teoremas fundamentales del bienestar. Óptimo económico y «second-best».",
+            "3.A.23": "Economía del bienestar (II). Fallos de mercado: externalidades y bienes públicos. Intervención y fallos del sector público.",
+            "3.A.24": "Economía del bienestar (III). Las funciones de bienestar social. Teoría de la elección colectiva. El teorema de imposibilidad de Arrow y desarrollos posteriores.",
+            "3.A.25": "La teoría neoclásica del mercado de trabajo. Análisis intertemporal de la oferta de trabajo. Teoría del capital humano. Función de ingresos de capital humano y evidencia empírica.",
+            "3.A.26": "Desempleo friccional. La curva de Beveridge, el modelo de búsqueda y emparejamiento de Diamond, Mortensen y Pissarides. Costes de ajuste y dinámica de la demanda de trabajo.",
+            "3.A.27": "Determinación de salarios: modelos de negociación, salarios de eficiencia y contratos implícitos.",
+            "3.A.28": "La tasa natural de paro y la NAIRU. La persistencia del desempleo.",
+            "3.A.29": "Modelización dinámica de las tomas de decisiones. Modelos de horizonte infinito y modelos de generaciones solapadas.",
+            "3.A.30": "Magnitudes macroeconómicas y contabilidad nacional.",
+            "3.A.31": "Análisis de las tablas «input-output».",
+            "3.A.32": "El modelo de oferta y demanda agregada: determinación de renta e inflación en una economía abierta. Análisis de las políticas monetaria y fiscal, y de los shocks y políticas de oferta.",
+            "3.A.33": "Teorías de la demanda de consumo corriente: ciclo vital y renta permanente. La demanda de bienes de consumo duradero. Evidencia empírica e implicaciones de política económica.",
+            "3.A.34": "Teorías de la inversión en bienes de equipo. Incertidumbre e irreversibilidad de la inversión. Implicaciones de política económica.",
+            "3.A.35": "Teorías de la demanda de dinero. Implicaciones de política económica.",
+            "3.A.36": "Política monetaria (I). El diseño y la instrumentación de la política monetaria.",
+            "3.A.37": "Política monetaria (II). Los mecanismos de transmisión de la política monetaria convencional. Rigideces de precios, rigideces de salarios y fricciones financieras. Los mecanismos de transmisión de la política monetaria no convencional.",
+            "3.A.38": "La política fiscal: efectos sobre el crecimiento económico y el ahorro.",
+            "3.A.39": "Déficit público. Conceptos. Financiación y sus consecuencias macroeconómicas. Dominación monetaria y dominación fiscal. La dinámica de la deuda pública y su sostenibilidad.",
+            "3.A.40": "Efectividad e interrelación de las políticas monetaria y fiscal en las principales economías desarrolladas desde la Gran Recesión de 2008. El valor de los multiplicadores fiscales.",
+            "3.A.41": "La inflación: causas y efectos sobre la eficiencia económica y el bienestar. Hiperinflación y deflación.",
+            "3.A.42": "Teorías de los ciclos económicos: ciclos nominales y reales. Referencia al ciclo financiero y sus interrelaciones con el ciclo real.",
+            "3.A.43": "Crecimiento económico (I). Acumulación de capital y progreso técnico exógeno. El modelo de Solow. El modelo de Solow aumentado con acumulación de capital humano. El modelo de Ramsey-Cass-Koopmans.",
+            "3.A.44": "Crecimiento económico (II). Modelos de crecimiento endógeno: rendimientos crecientes, capital humano e innovación tecnológica.",
+            "3.A.45": "Evidencia empírica sobre el crecimiento económico y la distribución de la renta entre los factores de producción. Contabilidad del crecimiento, con especial referencia a la productividad total de los factores. Convergencia económica internacional.",
+            "3.B.1": "La información financiera de las empresas: estados de situación y de circulación. Métodos de análisis económico y financiero de la empresa.",
+            "3.B.2": "La empresa y las decisiones de inversión. Diferentes criterios de valoración de proyectos. Rentabilidad, riesgo y coste del capital.",
+            "3.B.3": "La empresa y las decisiones de financiación: financiación propia frente a financiación ajena. Política de dividendos y estructura del capital.",
+            "3.B.4": "Análisis del crecimiento de la empresa. Métodos de valoración de empresas. Especial referencia a los procesos de fusión, adquisición y alianzas estratégicas.",
+            "3.B.5": "Teoría del comercio internacional (I). La teoría ricardiana de la ventaja comparativa. Determinación de la relación real de intercambio. El modelo de factores específicos. El Modelo Hecksher-Ohlin-Samuelson (H-O-S); teoremas derivados del modelo y extensiones.",
+            "3.B.6": "Teoría del comercio internacional (II). Nueva teoría del comercio internacional. Especial referencia a la competencia imperfecta, los rendimientos crecientes y la heterogeneidad empresarial.",
+            "3.B.7": "La política comercial (I). Instrumentos y efectos. Barreras arancelarias y no arancelarias. Otros instrumentos tradicionales.",
+            "3.B.8": "La política comercial (II). La política comercial estratégica.",
+            "3.B.9": "Comercio internacional y crecimiento económico. Especial referencia a los efectos del comercio sobre el crecimiento.",
+            "3.B.10": "Teoría de la integración económica.",
+            "3.B.11": "Balanza de pagos: concepto, medición e interpretación.",
+            "3.B.12": "Mecanismos de ajuste de la balanza de pagos. Especial referencia al enfoque intertemporal de balanza de pagos. Análisis de sostenibilidad del déficit y de la deuda exterior.",
+            "3.B.13": "Mercados de divisas: operaciones e instrumentos.",
+            "3.B.14": "Teorías de la determinación del tipo de cambio.",
+            "3.B.15": "Análisis comparado de los distintos regímenes cambiarios. Intervención y regulación de los mercados de cambio.",
+            "3.B.16": "Teoría de la integración monetaria.",
+            "3.B.17": "Teorías explicativas de las crisis de balanza de pagos.",
+            "3.B.18": "La nueva globalización económica y financiera. Determinantes y efectos de los movimientos internacionales de factores productivos: movilidad de trabajadores, inversión de cartera e inversión directa, con especial referencia a las cadenas globales de valor.",
+            "3.B.19": "La coordinación internacional de políticas económicas. Aspectos teóricos y prácticos. El G-20, la OCDE y otros foros internacionales.",
+            "3.B.20": "El sistema económico internacional desde el siglo XIX hasta la ruptura del sistema de Bretton-Woods.",
+            "3.B.21": "El sistema económico internacional desde la desaparición del sistema de Bretton-Woods.",
+            "3.B.22": "El Fondo Monetario Internacional. Estructura y políticas. La prevención y solución de crisis.",
+            "3.B.23": "Análisis de los instrumentos financieros de renta variable. Análisis fundamental. Teoría de la elección de cartera. El modelo de valoración de los activos de capital (CAPM). La teoría de valoración de activos por arbitraje (APT). Análisis técnico.",
+            "3.B.24": "Análisis de los instrumentos de renta fija. Determinación del precio y rendimiento de los bonos. La estructura temporal de los tipos de interés. Valoración del riesgo y del rendimiento de los bonos: duración y convexidad.",
+            "3.B.25": "Análisis de los instrumentos y de los mercados de derivados.",
+            "3.B.26": "Crisis financieras y pánicos bancarios; especial referencia a la crisis financiera internacional iniciada en 2007-2008. Gestión de riesgos de las instituciones financieras.",
+            "3.B.27": "Regulación financiera bancaria y no-bancaria. Fundamentos teóricos y evidencia empírica.",
+            "3.B.28": "Economía de los países en desarrollo. Teorías recientes del desarrollo económico. Evidencia empírica, con especial referencia a la aproximación experimental, e implicaciones para el diseño de políticas.",
+            "3.B.29": "La financiación exterior del desarrollo económico. El problema de la deuda externa. La ayuda al desarrollo.",
+            "3.B.30": "El Grupo del Banco Mundial, los Bancos Regionales de Desarrollo y otras instituciones financieras multilaterales de desarrollo.",
+            "3.B.31": "El cambio climático y su impacto en la economía. Evidencia y modelos integrados de evaluación. Acuerdos internacionales y principales medidas adoptadas para hacer frente al cambio climático.",
+            "3.B.32": "Perspectivas económicas mundiales. Estructura sectorial y geográfica de los flujos comerciales y financieros internacionales. Las nuevas áreas emergentes.",
+            "3.B.33": "La OMC. Antecedentes y Organización actual. El GATT y los Acuerdos sobre el comercio de mercancías. Situación actual.",
+            "3.B.34": "La OMC. Los acuerdos distintos de los de mercancías.",
+            "3.B.35": "Procesos de integración no comunitarios.",
+            "3.B.36": "Tratados, orden jurídico e instituciones de la Unión Europea.",
+            "3.B.37": "Las finanzas de la Unión Europea y el presupuesto comunitario. El marco financiero plurianual actual.",
+            "3.B.38": "La política agrícola de la Unión Europea. Problemas económicos y procesos de reforma. La política pesquera común.",
+            "3.B.39": "El mercado único de la Unión Europea. El principio de libre circulación de mercancías, servicios, personas y capitales. La política de competencia.",
+            "3.B.40": "La Cohesión Económica y Social en la Unión Europea: política regional e instrumentos presupuestarios y financieros. Política social y de empleo. El proceso de convergencia real en la Unión Europea.",
+            "3.B.41": "La política comercial de la Unión Europea.",
+            "3.B.42": "Las relaciones económicas exteriores de la Unión Europea. La política de cooperación al desarrollo de la Unión Europea.",
+            "3.B.43": "El origen del euro: funcionamiento y evolución del Sistema Monetario Europeo. Los criterios de convergencia nominal. El Sistema Europeo de Bancos Centrales: objetivos e instrumentos. La política monetaria en la Eurozona desde 2009.",
+            "3.B.44": "La Unión Bancaria: Pilares y Código normativo único. La Unión de Mercados de Capitales.",
+            "3.B.45": "La gobernanza económica de la Unión Europea y de la zona euro. El Semestre Europeo. Las reglas fiscales y el Procedimiento de Desequilibrios Macroeconómicos. El Mecanismo Europeo de Estabilidad. La respuesta común de política fiscal a partir de la covid-19."
+        };
+
         document.addEventListener('DOMContentLoaded', async function() {
+            // Inicializar con datos por defecto primero (para que siempre se vean los temas)
+            datosTest = { temas: temasDefault, preguntas: [], examenes: [] };
+            inicializarSelectores();
+            
+            // Luego intentar cargar el JSON con las preguntas
             try {
                 const response = await fetch('preguntas.json');
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
+                if (response.ok) {
+                    const jsonData = await response.json();
+                    // Actualizar solo las preguntas y exámenes, mantener los temas
+                    datosTest.preguntas = jsonData.preguntas || [];
+                    datosTest.examenes = jsonData.examenes || [];
+                    if (jsonData.temas) {
+                        datosTest.temas = jsonData.temas;
+                    }
+                    actualizarContadores();
+                    console.log('Preguntas cargadas:', datosTest.preguntas.length);
                 }
-                datosTest = await response.json();
-                console.log('Datos cargados:', datosTest);
-                console.log('Número de temas:', Object.keys(datosTest.temas).length);
-                inicializarSelectores();
             } catch (error) {
-                console.error('Error cargando preguntas:', error);
-                document.getElementById('temas-parte-a').innerHTML = '<p style="color: red; padding: 1rem;">Error al cargar preguntas.json. Asegúrate de que el archivo existe en la misma carpeta.</p>';
+                console.log('No se pudo cargar preguntas.json, usando solo los temas por defecto');
             }
         });
 
